--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,12 @@ image: alpine
   
 upload_egg:
   script:
+    # add git as part of the egg upload
+    - apk update && apk add git
+    - git config --global user.email "null@null.com"
+    - git config --global user.name "null"
+
     # Check if the package is actually installable
-    - apk update
     - apk add python
     - apk add --no-cache --virtual .build-deps gcc musl-dev
     - apk add g++
