--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,31 +2,34 @@ image: ubuntu:14.04
   
 upload_egg:
   script:
-    # add git as part of the egg upload
-    - apt-get update -y && apt-get install -y git
-    - git config --global user.email "null@null.com"
-    - git config --global user.name "null"
-    # Check if the package is actually installable
-    - apt-get install -y g++
-    - apt-get install -y python curl
-    - apt-get install -y python-dev libffi-dev
-    - curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py"
-    - python get-pip.py
-    - pip install -U devpi-client
+    - pip --version
+    - which pip
+    - cat /usr/bin/pip
+  #   # add git as part of the egg upload
+  #   - apt-get update -y && apt-get install -y git
+  #   - git config --global user.email "null@null.com"
+  #   - git config --global user.name "null"
+  #   # Check if the package is actually installable
+  #   - apt-get install -y g++
+  #   - apt-get install -y python curl
+  #   - apt-get install -y python-dev libffi-dev
+  #   - curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py"
+  #   - python get-pip.py
+  #   - pip install -U devpi-client
 
-    # make sure there's only 1 "version=" line in the setup.py file
-    - (if [ "$(grep "      version='" setup.py | wc -l)" == "1" ]; then echo "Found the version number"; else echo "Fail"; exit 33; fi);
-    # update version to put custom ContextLogic version
-    - version_origin=$(grep "      version='" setup.py | sed 's/^.*[^0-9]\([0-9]*\.[0-9]*\.[0-9]*\).*$/\1/')
-    - version_cl="$version_origin+cl$CI_PIPELINE_ID"
-    - sed -i "s/$version_origin/$version_cl/g" setup.py
-    - pip install .
-    - pip show $CI_PROJECT_NAME
+  #   # make sure there's only 1 "version=" line in the setup.py file
+  #   - (if [ "$(grep "      version='" setup.py | wc -l)" == "1" ]; then echo "Found the version number"; else echo "Fail"; exit 33; fi);
+  #   # update version to put custom ContextLogic version
+  #   - version_origin=$(grep "      version='" setup.py | sed 's/^.*[^0-9]\([0-9]*\.[0-9]*\.[0-9]*\).*$/\1/')
+  #   - version_cl="$version_origin+cl$CI_PIPELINE_ID"
+  #   - sed -i "s/$version_origin/$version_cl/g" setup.py
+  #   - pip install .
+  #   - pip show $CI_PROJECT_NAME
 
-    # Upload to Wish Pypi
-    - devpi use $PYPI_SERVER
-    - devpi login $USERNAME --password=$PASSWORD
-    - devpi use $INDEX
-    - devpi upload
-  only:
-    - master
+  #   # Upload to Wish Pypi
+  #   - devpi use $PYPI_SERVER
+  #   - devpi login $USERNAME --password=$PASSWORD
+  #   - devpi use $INDEX
+  #   - devpi upload
+  # only:
+  #   - master
