--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,16 +4,14 @@ upload_egg:
   script:
     # add git as part of the egg upload
     - apt-get update -y && apt-get install -y git
-    # - git config --global user.email "null@null.com"
-    # - git config --global user.name "null"
     # Check if the package is actually installable
     - apt-get install -y g++
     - apt-get install -y python curl
     - apt-get install -y python-dev libffi-dev
     - curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py"
     - python get-pip.py
+    - pip install pyOpenSSL ndg-httpsclient pyasn1
     - pip install -U devpi-client
-    - python --version
 
     # make sure there's only 1 "version=" line in the setup.py file
     - (if [ "$(grep "      version='" setup.py | wc -l)" == "1" ]; then echo "Found the version number"; else echo "Fail"; exit 33; fi);
@@ -24,10 +22,10 @@ upload_egg:
     - pip install .
     - pip show $CI_PROJECT_NAME
 
-  #   # Upload to Wish Pypi
-  #   - devpi use $PYPI_SERVER
-  #   - devpi login $USERNAME --password=$PASSWORD
-  #   - devpi use $INDEX
-  #   - devpi upload
+    # Upload to Wish Pypi
+    - devpi use $PYPI_SERVER
+    - devpi login $USERNAME --password=$PASSWORD
+    - devpi use $INDEX
+    - devpi upload
   # only:
   #   - master
